# RnD

./: .gitignore
CentralBackupSystem/V1R/: README.md  app.py  backup.py  config.json  requirements.txt
CentralBackupSystem/V1R/templates/: config.html  index.html
CentralBackupSystem/V2R/: app.py  config.json
CentralBackupSystem/V2R/templates/: index.html
ESP-Facility-Mesh/: CMakeLists.txt  README.md
ESP-Facility-Mesh/main/: mesh_main.c
ESP-Facility-Mesh/main/include/: defines.h
HOC/V1/V102R/: app.py  vision_data.json
HOC/V1/V103R/: app.py  events_log.jsonl
HOC/V1/V104R/: README.md  app.py  sent_events.json
RPI5-CM3/: README.md  config.json  record_and_stream.py  record_and_stream_wdr.py  record_and_stream_wpar.py
SensorsMonitoring/V1R/: README.md  requirements.txt
TOTAL Monitoring/DHT22_Modules/V1/main/: CMakeLists copy.txt  CMakeLists.txt  DHT22_INTEGRATION_README.md  data_sender.c  wifi_framework.c  wifi_framework.h  wifi_framework_example.c
TOTAL Monitoring/DHT22_Modules/V1/main/archive/: adxl345_driver.c  adxl345_fft_main.c  blink_example_main.c
TOTAL Monitoring/MQ-4/V1/main/: CMakeLists.txt  framework.c  mq4_sensor.c  mq4_sensor.h
Tools/server_test_web/: README.md  server_monitor.py  uninstall.sh
Tools/systemctl_sh/: QUICK_START.md  SUMMARY.md  demo.sh  service_manager.py
V1/ESP-Facility-Mesh/: sdkconfig  sdkconfig.old
V1/Quad_ESP32_img_query/: LICENSE
V1/Quad_ESP32_img_query/test/qrcode_demo/main/: CMakeLists.txt  idf_component.yml  qrcode_demo_main.c  qrcode_demo_main_gray_query.c  qrcode_demo_main_new_query(discontinued).c  qrcode_demo_main_wo_sending.c
V1/Tools/: server_test.sh
V4/: Main.ino
V4/Main_Templates/: Main.ino  Readme.md
V4/RGB/: RGB_Sample.ino
robust_esp_wifi/: CMakeLists.txt  sdkconfig  sdkconfig.old
robust_esp_wifi/main/: fast_scan.c
traffic_light_control/: README.md
(+697 files in other folders)
